--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,12 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+    fun getLocalProperty(propertyName: String): String {
+    val properties = java.util.Properties()
+    val file = rootProject.file("local.properties")
+    if (file.exists()) {
+        properties .load(file.inputStream())
+    }
+    return properties.getProperty(propertyName, "")
+}
+
