--- a/gradle.properties
+++ b/gradle.properties
@@ -29,4 +29,6 @@ android.nonTransitiveRClass=true
     }
     return properties.getProperty(propertyName, "")
 }
+kapt.incremental.apt=true
+kapt.use.worker.api=true
 
