menu, kalendarz,plandnia

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         <activity android:name=".ui.RegisterActivity" />
         <activity android:name=".ui.LoggedInActivity" />
         <activity android:name=".ui.HistoryActivity" />
+        <activity android:name=".ui.DayPlanActivity" />
+        <activity android:name=".ui.CalendarActivity" />
     </application>
 
 </manifest>
